fix: Add whitespace between checkbox & label
on home page concept search.

--- a/_sass/geolexica_home.scss
+++ b/_sass/geolexica_home.scss
@@ -60,6 +60,9 @@ body.home {
             align-items: center;
           }
 
+          label {
+            padding-left: 1em;
+          }
           input[type=checkbox], label {
             cursor: pointer;
           }
